Development
    Add gconf/dconf key 'enable-global-menu' distros should set this to TRUE when using gnome global menu
    Remove GTK allocation warning caused by audio file, due to uninitialized values
    Flush GTK Events in resize window
    When initially loading a folder, check to see if it is a DVD 
    Ensure that the window id is not 0, before using it
    Fix crash when giving a device name that does not exist
    Disable xvmc if mplayer reports video_out incompatibility with codec
    Don't force ffmpeg12 codec with xvmc vo 
    Retry playback without accelerated divx if using vdpau and vdpau error 
    Properly display DVD Title in playlist and on window title
    Add support for crystalhd vo, untested as I don't have the hardware.
    Set the allocation to the height and width desired
    Make cursor hiding work in GTK3
    Select Subtitle by ID rather than by description + name
    Fix Issue #514
    Remove "percent" from idledata
    Update translation files with updated file listings
    Remove global variable 'lastfile', and fix code that uses it, fixes issue #514
    Give the media_hbox a default height, makes media_info display work better when showing a video
    Remove dontplaynext = FALSE settings where incorrect
    Update the volume icon on mute
    Fix mute toggle from keyboard key 'm'
    Fix keyboard volume adjustment with 9 and 0
    Use --nokeepaspect when detecting mplayer2
    Don't fail on longer vo names, ie matrixview
    Capture Artist, Title, and Album metadata
    Set channel encoding to binary, solves problems with metadata
    Fix software volume not being set properly
    Make volume gain and post processing work
    Fix fullscreen mode when run as a plugin (X11 only)
    Set runtime in gmtk_media_player
    Cleanup some debug messages
    Fix restart in paused state
    Hook up scroll event for volume change or seeking
    Update media info from ICY stream data
    Fix TYPE_NETWORK for apple.com correctly